@@ -3,6 +3,9 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2009-04-02
+	- New MappingsPanel with a tabular of the current mappings.
+	
 2009-04-01
 	- Resuming with some updates and preparing to show info about select term in the
 	  search result panel, and created mappings..
